# This file is part of woff2-sys. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/woff2-sys/master/COPYRIGHT. No part of woff2-sys, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of woff2-sys. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/woff2-sys/master/COPYRIGHT.


[package]
name = "woff2-sys"
description = "FFI bindings to Google's woff2 library"
keywords = ["woff2", "woff", "ttf", "font"]
categories = ["external-ffi-bindings", "web-programming", "compression", "encoding"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/woff2-sys/blob/master/README.md"
homepage = "https://github.com/lemonrock/woff2-sys"
repository = "https://github.com/lemonrock/woff2-sys.git"
exclude = ["*"]
include = ["/README.md", "/LICENSE", "/COPYRIGHT", "/Cargo.toml", "/rustfmt.toml", "/clippy.toml", "/src/*.rs", "lib/woff2/LICENSE", "lib/woff2/README.md", "lib/woff2/CONTIBUTING.md", "/lib/woff2/src/**"]
build = "src/build.rs"
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
brotli-sys = "0.3"
cpp = "0.3"

[build-dependencies]
cpp_build = "0.3"
cc = { version = "1.0.0", features = ["parallel"] }
